Update revision information, also fix enum bug, and add a pure compile test file to the test suite

--- a/Test/SafeIntTest/SafeIntTest.vcxproj
+++ b/Test/SafeIntTest/SafeIntTest.vcxproj
@@ -148,6 +148,7 @@
   <ItemGroup>
     <ClCompile Include="..\AddVerify.cpp" />
     <ClCompile Include="..\CastVerify.cpp" />
+    <ClCompile Include="..\CompileTest.cpp" />
     <ClCompile Include="..\DivVerify.cpp" />
     <ClCompile Include="..\IncDecVerify.cpp" />
     <ClCompile Include="..\ModVerify.cpp" />
