Refactor compilation tests, fix warning coming from header

--- a/Test/SafeIntTestVS17/CompileTest/CompileTest.vcxproj
+++ b/Test/SafeIntTestVS17/CompileTest/CompileTest.vcxproj
@@ -119,7 +119,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\CleanCompile.cpp" />
     <ClCompile Include="..\..\CompileTest.cpp" />
+    <ClCompile Include="..\..\ConstExpr.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\..\SafeInt.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
