--- a/Test/SafeIntTestVS17/CompileTest/CompileTest.vcxproj.filters
+++ b/Test/SafeIntTestVS17/CompileTest/CompileTest.vcxproj.filters
@@ -18,5 +18,16 @@
     <ClCompile Include="..\..\CompileTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\ConstExpr.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\CleanCompile.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\..\SafeInt.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
