One more thing...

--- a/Test/ClangTest/makefile
+++ b/Test/ClangTest/makefile
@@ -5,6 +5,7 @@ all: SafeIntTest CompileTest CompileTest14
 clean:
 	rm -f SafeIntTest
 	rm -f CompileTest
+	rm -f CompileTest14
 
 SafeIntTest: ../AddVerify.cpp ../CastVerify.cpp ../DivVerify.cpp ../IncDecVerify.cpp ../ModVerify.cpp ../MultVerify.cpp ../SubVerify.cpp ../TestMain.cpp ../TestMain.h ../../SafeInt.hpp
 	clang++ --std=c++11 ../AddVerify.cpp ../CastVerify.cpp ../DivVerify.cpp ../IncDecVerify.cpp ../ModVerify.cpp ../MultVerify.cpp ../SubVerify.cpp ../TestMain.cpp -o SafeIntTest
