--- a/Test/SafeIntTestVS17/CompileTest/CompileTest.vcxproj
+++ b/Test/SafeIntTestVS17/CompileTest/CompileTest.vcxproj
@@ -126,6 +126,9 @@
   <ItemGroup>
     <ClInclude Include="..\..\..\SafeInt.hpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\..\README.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
