Fixes to allow compilation with intrinsics in place
Intrinsics and constexpr are incompatible. Constexpr was left on as many of the MultiplicationHelper template specializations as possible, and if intrinsics aren't used, constexpr goes back to being enabled.

--- a/Test/SafeIntTestVS17/CompileTest/CompileTest.vcxproj
+++ b/Test/SafeIntTestVS17/CompileTest/CompileTest.vcxproj
@@ -122,6 +122,7 @@
     <ClCompile Include="..\..\CleanCompile.cpp" />
     <ClCompile Include="..\..\CompileTest.cpp" />
     <ClCompile Include="..\..\ConstExpr.cpp" />
+    <ClCompile Include="..\..\ConstExpr_Intrinsics.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\SafeInt.hpp" />
