Travis: -std=c++11 for GCC 4.9

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ env:
   global:
   jobs:
     - compiler=g++-4.4
-    - compiler=g++-4.9
+    - compiler=g++-4.9 compiler_flags="-std=c++11"
     - compiler=g++-5   compiler_flags="-std=c++11"
     - compiler=g++-6
     - compiler=g++-7
