--- a/.travis.yml
+++ b/.travis.yml
@@ -2,22 +2,6 @@ language: cpp
 os: linux
 dist: xenial
 
-env:
-  global:
-  jobs:
-    - compiler=g++-4.6 compiler_flags="-std=c++0x -fpermissive"
-    - compiler=g++-4.9 compiler_flags="-std=c++11"
-    - compiler=g++-5   compiler_flags="-std=c++11"
-    - compiler=g++-6
-    - compiler=g++-7
-    - compiler=g++-8
-    - compiler=g++-9
-
-before_install:
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  - sudo apt-get -q update
-  - sudo apt-get -y install "$compiler"
-
 script:
   - >-
     cmake
@@ -31,3 +15,25 @@ script:
     -H.
   - cmake --build "$HOME/build" --target install
   - "$HOME/install/bin/SafeInt_Test"
+
+jobs:
+  _anchors:
+    ppa-ubuntu-toolchain: &ppa-ubuntu-toolchain
+      sourceline: 'ppa:ubuntu-toolchain-r/test'
+
+    get-gcc-46: &get-gcc-46 {apt: {packages: 'g++-4.6', sources: [*ppa-ubuntu-toolchain]}}
+    get-gcc-49: &get-gcc-49 {apt: {packages: 'g++-4.9', sources: [*ppa-ubuntu-toolchain]}}
+    get-gcc-5:  &get-gcc-5  {apt: {packages: 'g++-5',   sources: [*ppa-ubuntu-toolchain]}}
+    get-gcc-6:  &get-gcc-6  {apt: {packages: 'g++-6',   sources: [*ppa-ubuntu-toolchain]}}
+    get-gcc-7:  &get-gcc-7  {apt: {packages: 'g++-7',   sources: [*ppa-ubuntu-toolchain]}}
+    get-gcc-8:  &get-gcc-8  {apt: {packages: 'g++-8',   sources: [*ppa-ubuntu-toolchain]}}
+    get-gcc-9:  &get-gcc-9  {apt: {packages: 'g++-9',   sources: [*ppa-ubuntu-toolchain]}}
+
+  include:
+    - {addons: *get-gcc-46, env: {compiler: 'g++-4.6', compiler_flags: '-std=c++0x -fpermissive'}}
+    - {addons: *get-gcc-49, env: {compiler: 'g++-4.9', compiler_flags: '-std=c++11'}}
+    - {addons: *get-gcc-5,  env: {compiler: 'g++-5',   compiler_flags: '-std=c++11'}}
+    - {addons: *get-gcc-6,  env: {compiler: 'g++-6'}}
+    - {addons: *get-gcc-7,  env: {compiler: 'g++-7'}}
+    - {addons: *get-gcc-8,  env: {compiler: 'g++-8'}}
+    - {addons: *get-gcc-9,  env: {compiler: 'g++-9'}}
