--- a/.travis.yml
+++ b/.travis.yml
@@ -18,65 +18,66 @@ script:
 
 jobs:
   _anchors:
-    ppa-ubuntu-toolchain: &ppa-ubuntu-toolchain {sourceline: 'ppa:ubuntu-toolchain-r/test'}
+    src-gcc: &src-gcc {sourceline: 'ppa:ubuntu-toolchain-r/test'}
 
-    llvm-toolchain: &llvm-toolchain {key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'}
-    llvm-toolchain-50: &llvm-toolchain-50 {<<: *llvm-toolchain, sourceline: 'deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-5.0 main'}
-    llvm-toolchain-60: &llvm-toolchain-60 {<<: *llvm-toolchain, sourceline: 'deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-6.0 main'}
-    llvm-toolchain-7:  &llvm-toolchain-7  {<<: *llvm-toolchain, sourceline: 'deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-7 main'}
-    llvm-toolchain-8:  &llvm-toolchain-8  {<<: *llvm-toolchain, sourceline: 'deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-8 main'}
-    llvm-toolchain-9:  &llvm-toolchain-9  {<<: *llvm-toolchain, sourceline: 'deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-9 main'}
-    llvm-toolchain-10: &llvm-toolchain-10 {<<: *llvm-toolchain, sourceline: 'deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-10 main'}
-    llvm-toolchain-11: &llvm-toolchain-11 {<<: *llvm-toolchain, sourceline: 'deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-11 main'}
+    apt-gcc-44: &apt-gcc-44 {apt: {packages: 'g++-4.4', sources: [*src-gcc]}}
+    apt-gcc-46: &apt-gcc-46 {apt: {packages: 'g++-4.6', sources: [*src-gcc]}}
+    apt-gcc-49: &apt-gcc-49 {apt: {packages: 'g++-4.9', sources: [*src-gcc]}}
+    apt-gcc-5:  &apt-gcc-5  {apt: {packages: 'g++-5',   sources: [*src-gcc]}}
+    apt-gcc-6:  &apt-gcc-6  {apt: {packages: 'g++-6',   sources: [*src-gcc]}}
+    apt-gcc-7:  &apt-gcc-7  {apt: {packages: 'g++-7',   sources: [*src-gcc]}}
+    apt-gcc-8:  &apt-gcc-8  {apt: {packages: 'g++-8',   sources: [*src-gcc]}}
+    apt-gcc-9:  &apt-gcc-9  {apt: {packages: 'g++-9',   sources: [*src-gcc]}}
 
-    get-gcc-44: &get-gcc-44 {apt: {packages: 'g++-4.4', sources: [*ppa-ubuntu-toolchain]}}
-    get-gcc-46: &get-gcc-46 {apt: {packages: 'g++-4.6', sources: [*ppa-ubuntu-toolchain]}}
-    get-gcc-49: &get-gcc-49 {apt: {packages: 'g++-4.9', sources: [*ppa-ubuntu-toolchain]}}
-    get-gcc-5:  &get-gcc-5  {apt: {packages: 'g++-5',   sources: [*ppa-ubuntu-toolchain]}}
-    get-gcc-6:  &get-gcc-6  {apt: {packages: 'g++-6',   sources: [*ppa-ubuntu-toolchain]}}
-    get-gcc-7:  &get-gcc-7  {apt: {packages: 'g++-7',   sources: [*ppa-ubuntu-toolchain]}}
-    get-gcc-8:  &get-gcc-8  {apt: {packages: 'g++-8',   sources: [*ppa-ubuntu-toolchain]}}
-    get-gcc-9:  &get-gcc-9  {apt: {packages: 'g++-9',   sources: [*ppa-ubuntu-toolchain]}}
+    src-clang: &src-clang {key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'}
 
-    get-clang-35: &get-clang-35 {apt: {packages: 'clang-3.5'}}
-    get-clang-36: &get-clang-36 {apt: {packages: 'clang-3.6'}}
-    get-clang-37: &get-clang-37 {apt: {packages: 'clang-3.7'}}
-    get-clang-38: &get-clang-38 {apt: {packages: 'clang-3.8'}}
-    get-clang-39: &get-clang-39 {apt: {packages: 'clang-3.9'}}
-    get-clang-40: &get-clang-40 {apt: {packages: 'clang-4.0'}}
-    get-clang-50: &get-clang-50 {apt: {packages: 'clang-5.0', sources: [*llvm-toolchain-50]}}
-    get-clang-60: &get-clang-60 {apt: {packages: 'clang-6.0', sources: [*llvm-toolchain-60]}}
-    get-clang-7:  &get-clang-7  {apt: {packages: 'clang-7',   sources: [*llvm-toolchain-7]}}
-    get-clang-8:  &get-clang-8  {apt: {packages: 'clang-8',   sources: [*llvm-toolchain-8]}}
-    get-clang-9:  &get-clang-9  {apt: {packages: 'clang-9',   sources: [*llvm-toolchain-9]}}
-    get-clang-10: &get-clang-10 {apt: {packages: 'clang-10',  sources: [*llvm-toolchain-10]}}
-    get-clang-11: &get-clang-11 {apt: {packages: 'clang-11',  sources: [*llvm-toolchain-11]}}
+    src-clang-50: &src-clang-50 {<<: *src-clang, sourceline: 'deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-5.0 main'}
+    src-clang-60: &src-clang-60 {<<: *src-clang, sourceline: 'deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-6.0 main'}
+    src-clang-7:  &src-clang-7  {<<: *src-clang, sourceline: 'deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-7 main'}
+    src-clang-8:  &src-clang-8  {<<: *src-clang, sourceline: 'deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-8 main'}
+    src-clang-9:  &src-clang-9  {<<: *src-clang, sourceline: 'deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-9 main'}
+    src-clang-10: &src-clang-10 {<<: *src-clang, sourceline: 'deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-10 main'}
+    src-clang-11: &src-clang-11 {<<: *src-clang, sourceline: 'deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-11 main'}
+
+    apt-clang-35: &apt-clang-35 {apt: {packages: 'clang-3.5'}}
+    apt-clang-36: &apt-clang-36 {apt: {packages: 'clang-3.6'}}
+    apt-clang-37: &apt-clang-37 {apt: {packages: 'clang-3.7'}}
+    apt-clang-38: &apt-clang-38 {apt: {packages: 'clang-3.8'}}
+    apt-clang-39: &apt-clang-39 {apt: {packages: 'clang-3.9'}}
+    apt-clang-40: &apt-clang-40 {apt: {packages: 'clang-4.0'}}
+    apt-clang-50: &apt-clang-50 {apt: {packages: 'clang-5.0', sources: [*src-clang-50]}}
+    apt-clang-60: &apt-clang-60 {apt: {packages: 'clang-6.0', sources: [*src-clang-60]}}
+    apt-clang-7:  &apt-clang-7  {apt: {packages: 'clang-7',   sources: [*src-clang-7]}}
+    apt-clang-8:  &apt-clang-8  {apt: {packages: 'clang-8',   sources: [*src-clang-8]}}
+    apt-clang-9:  &apt-clang-9  {apt: {packages: 'clang-9',   sources: [*src-clang-9]}}
+    apt-clang-10: &apt-clang-10 {apt: {packages: 'clang-10',  sources: [*src-clang-10]}}
+    apt-clang-11: &apt-clang-11 {apt: {packages: 'clang-11',  sources: [*src-clang-11]}}
 
   include:
     # 4.4 is the earliest version available on the toolchain PPA.
-    - {addons: *get-gcc-44, env: {compiler: 'g++-4.4', compiler_flags: '-std=c++0x -fpermissive'}}
+    - {addons: *apt-gcc-44, env: {compiler: 'g++-4.4', compiler_flags: '-std=c++0x -fpermissive'}}
     # 4.6 is the earliest version to support noexcept.
-    - {addons: *get-gcc-46, env: {compiler: 'g++-4.6', compiler_flags: '-std=c++0x -fpermissive'}}
-    - {addons: *get-gcc-49, env: {compiler: 'g++-4.9', compiler_flags: '-std=c++11'}}
-    - {addons: *get-gcc-5,  env: {compiler: 'g++-5',   compiler_flags: '-std=c++11'}}
-    - {addons: *get-gcc-6,  env: {compiler: 'g++-6'}}
-    - {addons: *get-gcc-7,  env: {compiler: 'g++-7'}}
-    - {addons: *get-gcc-8,  env: {compiler: 'g++-8'}}
+    - {addons: *apt-gcc-46, env: {compiler: 'g++-4.6', compiler_flags: '-std=c++0x -fpermissive'}}
+    - {addons: *apt-gcc-49, env: {compiler: 'g++-4.9', compiler_flags: '-std=c++11'}}
+    - {addons: *apt-gcc-5,  env: {compiler: 'g++-5',   compiler_flags: '-std=c++11'}}
+    - {addons: *apt-gcc-6,  env: {compiler: 'g++-6'}}
+    - {addons: *apt-gcc-7,  env: {compiler: 'g++-7'}}
+    - {addons: *apt-gcc-8,  env: {compiler: 'g++-8'}}
     # 9 is the latest version available on the toolchain PPA.
-    - {addons: *get-gcc-9,  env: {compiler: 'g++-9'}}
+    - {addons: *apt-gcc-9,  env: {compiler: 'g++-9'}}
 
     # 3.5 is the earliest version available in the repository.
-    - {addons: *get-clang-35, env: {compiler: 'clang++-3.5', compiler_flags: '-std=c++11'}}
-    - {addons: *get-clang-36, env: {compiler: 'clang++-3.6', compiler_flags: '-std=c++11'}}
-    - {addons: *get-clang-37, env: {compiler: 'clang++-3.7', compiler_flags: '-std=c++11'}}
-    - {addons: *get-clang-38, env: {compiler: 'clang++-3.8', compiler_flags: '-std=c++11'}}
-    - {addons: *get-clang-39, env: {compiler: 'clang++-3.9', compiler_flags: '-std=c++11'}}
-    - {addons: *get-clang-40, env: {compiler: 'clang++-4.0', compiler_flags: '-std=c++11'}}
-    - {addons: *get-clang-50, env: {compiler: 'clang++-5.0', compiler_flags: '-std=c++11'}}
-    - {addons: *get-clang-60, env: {compiler: 'clang++-6.0'}}
-    - {addons: *get-clang-7,  env: {compiler: 'clang++-7'}}
-    - {addons: *get-clang-8,  env: {compiler: 'clang++-8'}}
-    - {addons: *get-clang-9,  env: {compiler: 'clang++-9'}}
-    - {addons: *get-clang-10, env: {compiler: 'clang++-10'}}
+    - {addons: *apt-clang-35, env: {compiler: 'clang++-3.5', compiler_flags: '-std=c++11'}}
+    - {addons: *apt-clang-36, env: {compiler: 'clang++-3.6', compiler_flags: '-std=c++11'}}
+    - {addons: *apt-clang-37, env: {compiler: 'clang++-3.7', compiler_flags: '-std=c++11'}}
+    - {addons: *apt-clang-38, env: {compiler: 'clang++-3.8', compiler_flags: '-std=c++11'}}
+    - {addons: *apt-clang-39, env: {compiler: 'clang++-3.9', compiler_flags: '-std=c++11'}}
+    - {addons: *apt-clang-40, env: {compiler: 'clang++-4.0', compiler_flags: '-std=c++11'}}
+    - {addons: *apt-clang-50, env: {compiler: 'clang++-5.0', compiler_flags: '-std=c++11'}}
+    - {addons: *apt-clang-60, env: {compiler: 'clang++-6.0'}}
+    - {addons: *apt-clang-7,  env: {compiler: 'clang++-7'}}
+    - {addons: *apt-clang-8,  env: {compiler: 'clang++-8'}}
+    - {addons: *apt-clang-9,  env: {compiler: 'clang++-9'}}
+    - {addons: *apt-clang-10, env: {compiler: 'clang++-10'}}
     # 11 is the latest version available on apt.llvm.org.
-    - {addons: *get-clang-11, env: {compiler: 'clang++-11'}}
+    - {addons: *apt-clang-11, env: {compiler: 'clang++-11'}}
