cmake: /W4 for MSVC

--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -25,6 +25,10 @@ endif()
 if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
     target_compile_options(SafeInt_CompileTest PRIVATE -Wall)
 endif()
+if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+    target_compile_options(SafeInt_Test PRIVATE /W4)
+    target_compile_options(SafeInt_CompileTest PRIVATE /W4)
+endif()
 
 install(TARGETS SafeInt_Test RUNTIME DESTINATION bin)
 install(TARGETS SafeInt_CompileTest RUNTIME DESTINATION bin)
