--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ endif()
 
 if(SAFEINT_NO_EXCEPTIONS)
     target_compile_definitions(SafeInt INTERFACE SAFE_INT_HAS_EXCEPTIONS=0)
-    if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+    if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
         target_compile_options(SafeInt INTERFACE -fno-exceptions)
     endif()
 else()
