--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,9 @@ if(POLICY CMP0054)
     cmake_policy(SET CMP0054 NEW)
 endif()
 
-option(SAFEINT_TESTS "compile the tests" OFF)
-option(SAFEINT_NO_EXCEPTIONS "disable exceptions" OFF)
+option(SAFEINT_TESTS "build the tests" OFF)
 option(SAFEINT_SANITIZE "sanitize undefined behaviour" OFF)
+option(SAFE_INT_HAS_EXCEPTIONS "enable/disable exceptions" ON)
 
 add_library(SafeInt INTERFACE)
 target_include_directories(SafeInt INTERFACE .)
@@ -22,13 +22,13 @@ if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
     endif()
 endif()
 
-if(SAFEINT_NO_EXCEPTIONS)
+if(SAFE_INT_HAS_EXCEPTIONS)
+    target_compile_definitions(SafeInt INTERFACE SAFE_INT_HAS_EXCEPTIONS=1)
+else()
     target_compile_definitions(SafeInt INTERFACE SAFE_INT_HAS_EXCEPTIONS=0)
     if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
         target_compile_options(SafeInt INTERFACE -fno-exceptions)
     endif()
-else()
-    target_compile_definitions(SafeInt INTERFACE SAFE_INT_HAS_EXCEPTIONS=1)
 endif()
 
 if(SAFEINT_TESTS)
