Fixes for gcc compilation with use C headers

--- a/Test/GccTest/makefile
+++ b/Test/GccTest/makefile
@@ -1,10 +1,11 @@
 #makefile for SafeInt test harness using clang
 
-all: SafeIntTest CompileTest CompileTest14
+all: SafeIntTest CompileTest CompileTest_C_HEADER CompileTest14 CompileTest14_NoEH
 
 clean:
 	rm -f SafeIntTest
 	rm -f CompileTest
+	rm -f CompileTest_C_Header
 	rm -f CompileTest14
 	rm -f *.err
 
@@ -14,6 +15,9 @@ SafeIntTest: ../AddVerify.cpp ../CastVerify.cpp ../DivVerify.cpp ../IncDecVerify
 
 CompileTest: ../CompileTest.cpp ../../SafeInt.hpp ../ConstExpr.cpp ../CleanCompile.cpp
 	g++ -Wall --std=c++11 -O3 ../CompileTest.cpp ../ConstExpr.cpp ../CleanCompile.cpp -o CompileTest 2> CompileTest.err
+
+CompileTest_C_HEADER: ../CompileTest.cpp ../../SafeInt.hpp ../ConstExpr.cpp ../CleanCompile.cpp
+	g++ -D SAFEINT_USE_C_HEADERS -Wall --std=c++11 -O3 ../CompileTest.cpp ../ConstExpr.cpp ../CleanCompile.cpp -o CompileTest_C_Header 2> CompileTest_C_Header.err
 
 CompileTest14: ../CompileTest.cpp ../../SafeInt.hpp ../ConstExpr.cpp ../CleanCompile.cpp
 	g++ -Wall --std=c++14 -O3 ../CompileTest.cpp ../ConstExpr.cpp ../CleanCompile.cpp -o CompileTest14 2> CompileTest14.err
